syntax = "proto3";

package tap.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message GRPCEvent {
  string id = 1;
  string method = 2;
  CallType call_type = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Duration duration = 5;
  int32 status = 6;
  string error = 7;
  Protocol protocol = 8;
  bytes request_body = 9;
  bytes response_body = 10;
}

enum CallType {
  CALL_TYPE_UNSPECIFIED = 0;
  CALL_TYPE_UNARY = 1;
  CALL_TYPE_SERVER_STREAM = 2;
  CALL_TYPE_CLIENT_STREAM = 3;
  CALL_TYPE_BIDI_STREAM = 4;
}

enum Protocol {
  PROTOCOL_UNSPECIFIED = 0;
  PROTOCOL_GRPC = 1;
  PROTOCOL_GRPC_WEB = 2;
  PROTOCOL_CONNECT = 3;
}

message WatchRequest {}

message WatchResponse {
  GRPCEvent event = 1;
}

service TapService {
  rpc Watch(WatchRequest) returns (stream WatchResponse);
}
